--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </header>
 
   <main class="main">
-    <section class="kinds">
+    <div class="kinds">
       <div class="container">
         <div class="kinds__group">
           <picture class="kinds__image">
@@ -89,7 +89,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <section class="booking">
       <div class="booking__container container">
